[gd_scene load_steps=6 format=3 uid="uid://deirvym8pv1kw"]

[ext_resource type="Script" uid="uid://c6irfgujnv6o7" path="res://items/weapons/cinder_volley/cinder_volley_weapon.gd" id="1_4wxgk"]
[ext_resource type="Resource" uid="uid://d00s7ds8evk6p" path="res://items/weapons/cinder_volley/cinder_volley_stats.tres" id="2_b2wmr"]
[ext_resource type="Script" uid="uid://5nf8qiekyyrw" path="res://systems/components/targeting_component.gd" id="3_kle4e"]
[ext_resource type="PackedScene" uid="uid://bi2e3pkfcknbt" path="res://systems/components/weapon_stats_component.tscn" id="4_7khd8"]
[ext_resource type="PackedScene" uid="uid://c5vl748oixb2p" path="res://systems/components/fire_behavior_component.tscn" id="5_kihf0"]

[node name="CinderVolleyWeapon" type="Node2D"]
script = ExtResource("1_4wxgk")
projectile_stats = ExtResource("2_b2wmr")
base_projectile_count = 3
base_fire_rate = 5.0

[node name="FireRateTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="TargetingComponent" type="Node" parent="."]
script = ExtResource("3_kle4e")
targeting_mode = 3
metadata/_custom_type_script = "uid://5nf8qiekyyrw"

[node name="WeaponStatsComponent" parent="." instance=ExtResource("4_7khd8")]

[node name="FireBehaviorComponent" parent="." instance=ExtResource("5_kihf0")]
spread_angle_degrees = 180.0

[connection signal="timeout" from="FireRateTimer" to="." method="_on_fire_rate_timer_timeout"]
